Ajout d'une nouvelle langue + Nofollow sur pages partenaires

--- a/data/locales/en_GB.csv
+++ b/data/locales/en_GB.csv
@@ -141,14 +141,14 @@ PRODUCTS_PRIX_PRIX;Prices
 PRODUCTS_ONGLET_GOLDBOOK;Goldbook
 PRODUCTS_PRIX_CALENDRIER;Prices & season calendar
 PRODUCT_PRICE_SEASON_CONTACT_US;For more informations, please contact us
-PRODUCT_PRICE_NIGHT_EMPTY;"&times;"
+PRODUCT_PRICE_NIGHT_EMPTY;"&times;1
 PRODUCT_PRICE_NIGHT_NUIT_SING;night
 PRODUCT_PRICE_NIGHT_NUIT_PLUR;nights
 PRODUCT_PRICE_NIGHT_PERSONNES_1;1 person
 PRODUCT_PRICE_NIGHT_PERSONNES_2;2 people
 PRODUCT_PRICE_NIGHT_PERSONNES_3;3 people
 PRODUCT_PRICE_NIGHT_PERSONNES_4;4 people
-PRODUCT_PRICE_SEASON_EMPTY;"&times;"
+PRODUCT_PRICE_SEASON_EMPTY;"&times;1
 PRODUCT_PRICE_SEASON_PERIODES_WEEK;Week
 PRODUCT_PRICE_SEASON_PERIODES_WEEKEND;Week-end
 PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK;Mid-week
@@ -191,80 +191,78 @@ CONTACT_ENVOI_MAIL_MESSAGE_OBLIGATOIRE;Every field marked by an * must be inpute
 CONTACT_FORM_SUBMIT;Make a reservation demand
 CONTACT_ENVOI_MAIL_MAIL;contact@gite-luchon.com
 CONTACT_OPTION_CHALET;All the chalet
-
-
 CONTACT_ENVOI_MAIL_SUJET;[Gite-luchon.com][ANGLAIS] Nouvelle demande de réservation
 CONTACT_ENVOI_MAIL_ALT;Pour afficher ce message, vous devez utiliser un client compatible HTML
-ERROR_EXCEPTION_SITE_UNKNOWN;The website you’re trying to reach does not exists.;private
-ERROR_EXCEPTION_INVALIDARGUMENT;TECHNICAL ERROR : Entity is incorrect;private
-ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME;The asking property does not exist;private
-ERROR_DB_CONNECTION;Error when trying to connect database;private
-META_GOOGLE_VERIF;MyUxzCNcdspiFGJxWUrpzL0A2rf3TfQdg88ZBvrGL10;private
-NEWS_EDIT_TABS_CONTENT;Content;private
-NEWS_EDIT_TABS_PICTURES;Pictures;private
-NEWS_EDIT_TITLE;Edit news;private
-NEWS_EDIT_TITLE_LABEL;Title;private
-NEWS_EDIT_CONTENT_LABEL;Content;private
-NEWS_EDIT_LINK_LABEL;Link;private
-NEWS_EDIT_LOCATION_LABEL;GPS coordinates;private
-ACTIVITY_EDIT_TABS_CONTENT;Contents;private
-ACTIVITY_EDIT_TABS_PICTURES;Pictures;private
-ACTIVITY_EDIT_TITLE;Edit activity;private
-ACTIVITY_EDIT_TITLE_LABEL;Title;private
-ACTIVITY_EDIT_CONTENT_LABEL;Content;private
-ACTIVITY_EDIT_LINK_LABEL;Link;private
-ACTIVITY_EDIT_LOCATION_LABEL;GPS coordinates;private
-PRODUCTS_EDIT_CATEGORIE_TITLE;Edit category;private
-PRODUCTS_EDIT_TABS_CONTENT;Contents;private
-PRODUCTS_EDIT_TABS_PICTURES;Pictures;private
-PRODUCTS_EDIT_TABS_GOLDBOOK;Goldbook public messages;private
-PRODUCTS_EDIT_TABS_GOLDBOOK_AVALIDER;Goldbook waiting messages;private
-PRODUCTS_EDIT_PRODUCT_TITLE;Edit rental;private
-PRODUCTS_EDIT_TABS_PRICES;Availabilities & prices;private
-PRODUCTS_EDIT_PRICE_DISPO;HTML code for availabilities;private
-PRODUCTS_EDIT_PRICE_NUIT1;1 person/night;private
-PRODUCTS_EDIT_PRICE_NUIT2;2 people/night;private
-PRODUCTS_EDIT_PRICE_NUIT3;3 people/night;private
-PRODUCTS_EDIT_PRICE_NUIT4;4 people/night;private
-PRODUCTS_EDIT_PRICE_SAISON_SEMAINE;Week;private
-PRODUCTS_EDIT_PRICE_SAISON_WEEKEND;Week-end;private
-PRODUCTS_EDIT_PRICE_SAISON_MIDWEEK;Mid-week;private
-CONTACT_CENTER_COORDINATES_LAT;42.814166;private
-CONTACT_CENTER_COORDINATES_LONG;0.55444;private
-GLOBAL_ADMIN_ADD;Add an element;private
-GLOBAL_ADMIN_UPDATE;Update an element;private
-GLOBAL_ADMIN_DELETE;Delete an element;private
-GLOBAL_ADMIN_DELETE_CONFIRM;DDo you really want to delete this element ?;private
-GLOBAL_ADMIN_UP;Pull up the element;private
-GLOBAL_ADMIN_DOWN;Pull down the element;private
-GLOBAL_ADMIN_ONLINE;Put online;private
-GLOBAL_ADMIN_OFFLINE;Put offline;private
-GLOBAL_ADMIN_LIST_APERCU;Preview;private
-GLOBAL_ADMIN_LIST_DATE_AJOUT;Added on;private
-GLOBAL_ADMIN_LIST_DATE_MODIFICATION;Upadted on;private
-GLOBAL_ADMIN_LIST_DATE_SUPPRESSION;Deleted on;private
-GLOBAL_ADMIN_LIST_ACTIONS;Actions;private
-GLOBAL_LANGUAGETOGGLER_LABEL;Switch edition language;private
-GLOBAL_MODAL_DELETE_TEXT;You’re going to delete this element. Are you really sure ?;private
-GLOBAL_MODAL_DELETE_CONFIRM;Confirm;private
-GLOBAL_MODAL_DELETE_CANCEL;Cancel;private
-GLOBAL_MENU_CARROUSEL;Carrousel;private
-GLOBAL_MENU_DECONNEXION;Disconnect;private
-GLOBAL_MENU_TRADUCTIONS;Translations;private
-GLOBAL_MENU_SEASON;Seasons;private
-HOME_LOGIN_TITLE;Administration connection;private
-HOME_LOGIN_FORM_LOGIN_LABEL;Login;private
-HOME_LOGIN_FORM_PASSWORD_LABEL;Password;private
-HOME_LOGIN_FORM_SUBMIT_LABEL;Connection;private
-HOME_PAGECMS_HOME_TITLE;Home page edition;private
-HOME_PAGECMS_PARTNERS_TITLE;Partners page edition;private
-HOME_PAGECMS_EDIT_TITLE_LABEL;Title;private
-HOME_PAGECMS_EDIT_CONTENT_LABEL;Content;private
-HOME_CARROUSEL_TITLE;Carrousel pictures edition;private
-HOME_CARROUSEL_FILE_LABEL;New file;private
-HOME_CARROUSEL_LIST_ID;#;private
-HOME_CARROUSEL_LIST_ORIGINALFILENAME;Filename;private
-HOME_CARROUSEL_LIST_TYPE;Type;private
-HOME_CARROUSEL_LIST_ONLINE;Online ?;private
-SEASON_CHANGE_YEAR;Update for year :;private
-SEASON_TYPE;Seasons;private
+ERROR_EXCEPTION_SITE_UNKNOWN;The website you’re trying to reach does not exists.;1
+ERROR_EXCEPTION_INVALIDARGUMENT;TECHNICAL ERROR : Entity is incorrect;1
+ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME;The asking property does not exist;1
+ERROR_DB_CONNECTION;Error when trying to connect database;1
+META_GOOGLE_VERIF;MyUxzCNcdspiFGJxWUrpzL0A2rf3TfQdg88ZBvrGL10;1
+NEWS_EDIT_TABS_CONTENT;Content;1
+NEWS_EDIT_TABS_PICTURES;Pictures;1
+NEWS_EDIT_TITLE;Edit news;1
+NEWS_EDIT_TITLE_LABEL;Title;1
+NEWS_EDIT_CONTENT_LABEL;Content;1
+NEWS_EDIT_LINK_LABEL;Link;1
+NEWS_EDIT_LOCATION_LABEL;GPS coordinates;1
+ACTIVITY_EDIT_TABS_CONTENT;Contents;1
+ACTIVITY_EDIT_TABS_PICTURES;Pictures;1
+ACTIVITY_EDIT_TITLE;Edit activity;1
+ACTIVITY_EDIT_TITLE_LABEL;Title;1
+ACTIVITY_EDIT_CONTENT_LABEL;Content;1
+ACTIVITY_EDIT_LINK_LABEL;Link;1
+ACTIVITY_EDIT_LOCATION_LABEL;GPS coordinates;1
+PRODUCTS_EDIT_CATEGORIE_TITLE;Edit category;1
+PRODUCTS_EDIT_TABS_CONTENT;Contents;1
+PRODUCTS_EDIT_TABS_PICTURES;Pictures;1
+PRODUCTS_EDIT_TABS_GOLDBOOK;Goldbook public messages;1
+PRODUCTS_EDIT_TABS_GOLDBOOK_AVALIDER;Goldbook waiting messages;1
+PRODUCTS_EDIT_PRODUCT_TITLE;Edit rental;1
+PRODUCTS_EDIT_TABS_PRICES;Availabilities & prices;1
+PRODUCTS_EDIT_PRICE_DISPO;HTML code for availabilities;1
+PRODUCTS_EDIT_PRICE_NUIT1;1 person/night;1
+PRODUCTS_EDIT_PRICE_NUIT2;2 people/night;1
+PRODUCTS_EDIT_PRICE_NUIT3;3 people/night;1
+PRODUCTS_EDIT_PRICE_NUIT4;4 people/night;1
+PRODUCTS_EDIT_PRICE_SAISON_SEMAINE;Week;1
+PRODUCTS_EDIT_PRICE_SAISON_WEEKEND;Week-end;1
+PRODUCTS_EDIT_PRICE_SAISON_MIDWEEK;Mid-week;1
+CONTACT_CENTER_COORDINATES_LAT;42.814166;1
+CONTACT_CENTER_COORDINATES_LONG;0.55444;1
+GLOBAL_ADMIN_ADD;Add an element;1
+GLOBAL_ADMIN_UPDATE;Update an element;1
+GLOBAL_ADMIN_DELETE;Delete an element;1
+GLOBAL_ADMIN_DELETE_CONFIRM;DDo you really want to delete this element ?;1
+GLOBAL_ADMIN_UP;Pull up the element;1
+GLOBAL_ADMIN_DOWN;Pull down the element;1
+GLOBAL_ADMIN_ONLINE;Put online;1
+GLOBAL_ADMIN_OFFLINE;Put offline;1
+GLOBAL_ADMIN_LIST_APERCU;Preview;1
+GLOBAL_ADMIN_LIST_DATE_AJOUT;Added on;1
+GLOBAL_ADMIN_LIST_DATE_MODIFICATION;Upadted on;1
+GLOBAL_ADMIN_LIST_DATE_SUPPRESSION;Deleted on;1
+GLOBAL_ADMIN_LIST_ACTIONS;Actions;1
+GLOBAL_LANGUAGETOGGLER_LABEL;Switch edition language;1
+GLOBAL_MODAL_DELETE_TEXT;You’re going to delete this element. Are you really sure ?;1
+GLOBAL_MODAL_DELETE_CONFIRM;Confirm;1
+GLOBAL_MODAL_DELETE_CANCEL;Cancel;1
+GLOBAL_MENU_CARROUSEL;Carrousel;1
+GLOBAL_MENU_DECONNEXION;Disconnect;1
+GLOBAL_MENU_TRADUCTIONS;Translations;1
+GLOBAL_MENU_SEASON;Seasons;1
+HOME_LOGIN_TITLE;Administration connection;1
+HOME_LOGIN_FORM_LOGIN_LABEL;Login;1
+HOME_LOGIN_FORM_PASSWORD_LABEL;Password;1
+HOME_LOGIN_FORM_SUBMIT_LABEL;Connection;1
+HOME_PAGECMS_HOME_TITLE;Home page edition;1
+HOME_PAGECMS_PARTNERS_TITLE;Partners page edition;1
+HOME_PAGECMS_EDIT_TITLE_LABEL;Title;1
+HOME_PAGECMS_EDIT_CONTENT_LABEL;Content;1
+HOME_CARROUSEL_TITLE;Carrousel pictures edition;1
+HOME_CARROUSEL_FILE_LABEL;New file;1
+HOME_CARROUSEL_LIST_ID;#;1
+HOME_CARROUSEL_LIST_ORIGINALFILENAME;Filename;1
+HOME_CARROUSEL_LIST_TYPE;Type;1
+HOME_CARROUSEL_LIST_ONLINE;Online ?;1
+SEASON_CHANGE_YEAR;Update for year :;1
+SEASON_TYPE;Seasons;1
