--- a/data/locales/es_ES.csv
+++ b/data/locales/es_ES.csv
@@ -27,6 +27,7 @@ GLOBAL_MENU_CONTACT;Para reservar
 GLOBAL_MENU_PARTNERS;Socios
 GLOBAL_MENU_LOCATIONS;Alquileres
 GLOBAL_MENU_DISPONIBILITES;Disponibilidades
+GLOBAL_MENU_PLAN;Sitemap
 GLOBAL_MENU_SEASON;Temporadas
 GLOBAL_HEADER_TITLE;Luchon Location Vacances
 GLOBAL_OUI;si
